# bazel-web-template

./: .bazelignore  .bazeliskrc  .bazelrc  .gitignore  .npmrc  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tsconfig.json
.github/workflows/: ci.yaml
rules/: constants.bzl
rules/js/: defs.bzl
rules/ts/: defs.bzl
src/: BUILD.bazel  a.test.mjs  b.mjs
src/js/: BUILD.bazel  a.test.mjs
src/ts/: BUILD.bazel  c.mts  c.test.mts  d.mts
src/ts/configs/: BUILD.bazel  api.mts  impl.mts  int.mts  mock.mts
src/ts/interfaces/: BUILD.bazel  main.mts
src/ts/interfaces/greet/: BUILD.bazel  greet.d.mts  greet.mjs
src/ts/subfolder/: BUILD.bazel
src/ts/subfolder_2/: BUILD.bazel
