load("//rules/js:defs.bzl", "js_binary", "js_library", "js_test")

js_library(
    name = "a",
    srcs = [
        "a.mjs",
    ],
)

js_library(
  name = "b",
  srcs = [
      "b.mjs",
  ],
  deps = [
      ":a",
  ],
)

js_binary(
    name = "run_b",
    data = [":b"],
    entry_point = ":b",
)


js_test(
    name = "test_a",
    data = [":a"],
    entry_point = "a.test.mjs",
    size = "small",
)