load("//rules/js:defs.bzl", "js_binary", "js_test")
load("//rules/ts:defs.bzl", "ts_project")

package(default_visibility = ["//src/ts:__subpackages__"])

ts_project(
    name = "c",
    srcs = [
        "c.mts",
    ],
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/@types/node",
    ],
)

ts_project(
    name = "d",
    srcs = [
        "d.mts",
    ],
    tsconfig = "//:tsconfig",
    deps = [
        ":c",
        "//:node_modules/@types/node",
    ],
)

js_binary(
    name = "run_d",
    data = [":d"],
    entry_point = "d.mjs",
)

ts_project(
    name = "c_test_lib",
    srcs = [
        "c.test.mts",
    ],
    tsconfig = "//:tsconfig",
    deps = [
        ":c",
        "//:node_modules/@types/node",
    ],
)

js_test(
    name = "test_c",
    size = "small",
    data = [
        "c.test.mjs",
        ":c",
    ],
    entry_point = "c.test.mjs",
)
