load("//rules/js:defs.bzl", "js_binary")
load("//rules/ts:defs.bzl", "ts_project")

ts_project(
    name = "main",
    srcs = [
        "main.mts",
    ],
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/@types/node",
        "//src/ts/interfaces/greet",
        "//src/ts/interfaces/greet:greet_interface",
    ],
)

js_binary(
    name = "run_main",
    data = [":main"],
    entry_point = "main.mjs",
)
